--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,78 +12,72 @@
 
 
     <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:paddingLeft="25dp"
-        android:paddingRight="25dp"
         android:paddingTop="25dp"
-        android:weightSum="1">
+        android:paddingLeft="25dp"
+        android:paddingRight="25dp">
 
-
-        <ImageView
+        <ImageView android:src="@drawable/rdv"
             android:layout_width="wrap_content"
             android:layout_height="150dp"
-            android:layout_gravity="center_horizontal"
             android:layout_marginBottom="24dp"
-            android:src="@drawable/rdv" />
+            android:layout_gravity="center_horizontal" />
 
         <!--  Name Label -->
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginTop="8dp">
-
-            <EditText
-                android:id="@+id/username"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp">
+            <EditText android:id="@+id/username"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Identifiant"
-                android:inputType="text" />
+                android:inputType="text"
+                android:hint="Identifiant" />
         </android.support.design.widget.TextInputLayout>
 
         <!-- Password Label -->
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginTop="8dp">
-
-            <EditText
-                android:id="@+id/password"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp">
+            <EditText android:id="@+id/password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Mot de passe"
-                android:inputType="textPassword" />
+                android:inputType="textPassword"
+                android:hint="Mot de passe"/>
         </android.support.design.widget.TextInputLayout>
 
         <android.support.v7.widget.AppCompatButton
             android:id="@+id/MyButton"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="24dp"
             android:layout_marginTop="24dp"
-            android:background="#3F51B5"
-            android:onClick="invokeLogin"
+            android:layout_marginBottom="24dp"
             android:padding="12dp"
             android:text="connexion"
+            android:onClick="invokeLogin"
+            android:textSize="20dp"
+            android:background="#3F51B5"
             android:textColor="#FEFEFE"
-            android:textSize="20dp" />
+            />
 
         <android.support.v7.widget.AppCompatButton
             android:id="@+id/MyButton2"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="24dp"
             android:layout_marginTop="24dp"
-            android:background="#006633"
-            android:onClick="invokeCreate"
+            android:layout_marginBottom="24dp"
             android:padding="12dp"
             android:text="Créer un compte"
+            android:onClick="invokeCreate"
+            android:textSize="20dp"
+            android:background="#006633"
             android:textColor="#FEFEFE"
-            android:textSize="20dp" />
-
+            />
 
     </LinearLayout>
 
