--- a/app/src/main/res/layout/bouquet_main.xml
+++ b/app/src/main/res/layout/bouquet_main.xml
@@ -1,63 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:paddingLeft="5dp"
-    android:paddingRight="5dp">
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
         >
 
-        <Button
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:text="Infos"
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/info"
             android:id="@+id/button"
-
             />
 
-        <Button
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:text="Deconnexion"
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/exit"
             android:id="@+id/button2"
+            android:onClick="Deconnexion"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
-            android:onClick="Deconnexion"
+            android:layout_alignBottom="@+id/button"
             />
 
     </RelativeLayout>
 
-    <TextView
-        android:id="@+id/txt"
-        android:layout_width="fill_parent"
-        android:layout_height="35dp"
-        android:gravity="center"
-        android:layout_marginTop="10dp"
-        android:text="LISTE DES CHAÎNES"
-        android:textColor="#FFFFFF"
-        android:textStyle="bold"
-        android:textSize="25dp"
-        android:background="#CC3333"
-        />
+        <TextView
+            android:id="@+id/txt"
+            android:layout_width="fill_parent"
+            android:layout_height="35dp"
+            android:gravity="center"
+            android:layout_marginTop="10dp"
+            android:text="LISTE DES CHAÎNES"
+            android:textColor="#FFFFFF"
+            android:textStyle="bold"
+            android:textSize="25dp"
+            android:background="#CC3333"
+            />
 
-    <EditText
-        android:id="@+id/edit_recherche"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="20dp"
-        android:hint="Recherche..."
-        >
-    </EditText>
+        <EditText
+            android:id="@+id/edit_recherche"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="20dp"
+            android:hint="Recherche..."
+            >
+        </EditText>
 
-    <ListView
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:id="@android:id/list"/>
+        <ListView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:id="@android:id/list"
+            />
 
-</LinearLayout>
+    </LinearLayout>
