--- a/app/src/main/res/layout/create_account.xml
+++ b/app/src/main/res/layout/create_account.xml
@@ -2,10 +2,11 @@
 
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/ScrollView01"
-    style="@style/Widget.Design.NavigationView"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:fillViewport="false">
+    android:fillViewport="false"
+style="@style/Widget.Design.NavigationView"
+    >
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
@@ -14,211 +15,215 @@
         android:paddingLeft="5dp"
         android:paddingRight="5dp">
 
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        >
+
+        <TextView
+            android:id="@+id/txt"
+            android:layout_width="fill_parent"
+            android:layout_height="35dp"
+            android:gravity="center"
+            android:layout_marginTop="10dp"
+            android:text="Création du compte"
+            android:textColor="#FFFFFF"
+            android:textStyle="bold"
+            android:textSize="25dp"
+            android:background="#CC3333"
+            />
+
         <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:paddingTop="25dp"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp">
 
-            <TextView
-                android:id="@+id/txt"
-                android:layout_width="fill_parent"
-                android:layout_height="35dp"
-                android:layout_marginTop="10dp"
-                android:background="#CC3333"
-                android:gravity="center"
-                android:text="Création du compte"
-                android:textColor="#FFFFFF"
-                android:textSize="25dp"
-                android:textStyle="bold" />
-
-            <LinearLayout
+        <!--  Name Label -->
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="8dp">
+            <EditText android:id="@+id/username"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:paddingLeft="20dp"
-                android:paddingRight="20dp"
-                android:paddingTop="25dp">
-
-                <!--  Name Label -->
-                <android.support.design.widget.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="8dp"
-                    android:layout_marginTop="10dp">
-
-                    <EditText
-                        android:id="@+id/username"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="Identifiant"
-                        android:inputType="text" />
-                </android.support.design.widget.TextInputLayout>
+                android:inputType="text"
+                android:hint="Identifiant" />
+        </android.support.design.widget.TextInputLayout>
 
 
-                <android.support.design.widget.TextInputLayout
-                    android:id="@+id/email_layout"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/email_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-                    <EditText
-                        android:id="@+id/email_to_login"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="Email"
-                        android:inputType="textEmailAddress"
-                        android:singleLine="true" />
-                </android.support.design.widget.TextInputLayout>
+            <EditText
+                android:id="@+id/email_to_login"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Email"
+                android:inputType="textEmailAddress"
+                android:singleLine="true" />
+        </android.support.design.widget.TextInputLayout>
 
-                <!-- Password Label -->
-                <android.support.design.widget.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="8dp"
-                    android:layout_marginTop="8dp">
+        <!-- Password Label -->
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp">
+            <EditText android:id="@+id/password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textPassword"
+                android:hint="Mot de passe"
+                />
+        </android.support.design.widget.TextInputLayout>
 
-                    <EditText
-                        android:id="@+id/password"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="Mot de passe"
-                        android:inputType="textPassword" />
-                </android.support.design.widget.TextInputLayout>
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp">
+            <EditText android:id="@+id/Confirmpassword"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textPassword"
+                android:hint="Confirme mot de passe"/>
+        </android.support.design.widget.TextInputLayout>
 
-                <android.support.design.widget.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="8dp"
-                    android:layout_marginTop="8dp">
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            >
 
-                    <EditText
-                        android:id="@+id/Confirmpassword"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="Confirme mot de passe"
-                        android:inputType="textPassword" />
-                </android.support.design.widget.TextInputLayout>
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/date"
+            android:text="Date de naissance : "
+            android:layout_marginTop="25dp"
+            android:textSize="15dp"
+            android:textColor="#000000"
+            />
 
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+            <TextView
+                android:id="@+id/textView1"
+                android:textSize="15dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/numberPicker1"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="25dp"
+                android:text="JJ/ " />
 
-                    <TextView
-                        android:id="@+id/date"
-                        android:layout_width="fill_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="25dp"
-                        android:text="Date de naissance : "
-                        android:textColor="#000000"
-                        android:textSize="15dp" />
+            <TextView
+                android:id="@+id/textView2"
+                android:textSize="15dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/numberPicker1"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="25dp"
+                android:text="MM/ " />
 
-                    <TextView
-                        android:id="@+id/textView1"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@+id/numberPicker1"
-                        android:layout_centerHorizontal="true"
-                        android:layout_marginTop="25dp"
-                        android:text="JJ/ "
-                        android:textSize="15dp" />
+            <TextView
+                android:id="@+id/textView3"
+                android:textSize="15dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/numberPicker1"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="25dp"
+                android:text="AAAA " />
 
-                    <TextView
-                        android:id="@+id/textView2"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@+id/numberPicker1"
-                        android:layout_centerHorizontal="true"
-                        android:layout_marginTop="25dp"
-                        android:text="MM/ "
-                        android:textSize="15dp" />
+    </LinearLayout>
 
-                    <TextView
-                        android:id="@+id/textView3"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@+id/numberPicker1"
-                        android:layout_centerHorizontal="true"
-                        android:layout_marginTop="25dp"
-                        android:text="AAAA "
-                        android:textSize="15dp" />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            >
 
-                </LinearLayout>
+            <NumberPicker
+                android:id="@+id/numberPicker1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                />
 
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center">
+            <NumberPicker
+                android:id="@+id/numberPicker2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                />
 
-                    <NumberPicker
-                        android:id="@+id/numberPicker1"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
-
-                    <NumberPicker
-                        android:id="@+id/numberPicker2"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
-
-                    <NumberPicker
-                        android:id="@+id/numberPicker3"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"></LinearLayout>
-
-
-            </LinearLayout>
-
-            <RelativeLayout
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:layout_marginBottom="20dp"
-                android:layout_marginLeft="2dp"
-                android:layout_marginRight="2dp"
-                android:orientation="vertical"
-
-                >
-
-                <Button
-                    android:id="@+id/MyButton2"
-                    android:layout_width="150dp"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true"
-                    android:layout_alignParentLeft="true"
-                    android:background="#990000"
-                    android:onClick="Retourhome"
-                    android:padding="20dp"
-                    android:text="Retour"
-
-                    android:textColor="#FEFEFE"
-                    android:textSize="20dp"
-
-                    />
-
-                <Button
-                    android:id="@+id/MyButton"
-                    android:layout_width="150dp"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:layout_alignTop="@+id/MyButton2"
-                    android:background="#006633"
-                    android:onClick="Creationbdd"
-                    android:padding="20dp"
-                    android:text="Terminer"
-
-                    android:textColor="#FEFEFE"
-                    android:textSize="20dp"
-
-                    />
-
-            </RelativeLayout>
+            <NumberPicker
+                android:id="@+id/numberPicker3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                />
 
         </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            >
+        </LinearLayout>
+
+
+    </LinearLayout>
+
+    <RelativeLayout
+            android:orientation="vertical"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+        android:layout_marginBottom="20dp"
+        android:layout_marginLeft="2dp"
+        android:layout_marginRight="2dp"
+
+        >
+            <Button
+                android:id="@+id/MyButton2"
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:padding="20dp"
+                android:text="Retour"
+                android:onClick="Retourhome"
+                android:textSize="20dp"
+                android:background="#990000"
+                android:textColor="#FEFEFE"
+
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentLeft="true"
+
+                />
+
+        <Button
+            android:id="@+id/MyButton"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:padding="20dp"
+            android:text="Terminer"
+            android:onClick="Creationbdd"
+            android:textSize="20dp"
+            android:background="#006633"
+            android:textColor="#FEFEFE"
+
+            android:layout_alignTop="@+id/MyButton2"
+            android:layout_alignParentRight="true"
+
+            />
+
+        </RelativeLayout>
+
+    </LinearLayout>
 
     </LinearLayout>
 
