--- a/app/src/main/res/layout/custom.xml
+++ b/app/src/main/res/layout/custom.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="200dp">
 
     <LinearLayout
         android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical" >
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical" >
 
             <TextView
                 android:id="@+id/nomChaine"
@@ -19,8 +19,9 @@
                 android:layout_height="wrap_content"
                 android:text="Video1"
                 android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textStyle="bold"
                 android:textSize="15dp"
-                android:textStyle="bold" />
+                />
         </LinearLayout>
 
     </LinearLayout>
@@ -29,6 +30,9 @@
         android:id="@+id/logoChaine"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/rdv" />
+        android:src="@drawable/rdv"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
+        />
 
 </LinearLayout>
